Fix/map legend overflow (#157)
remove the map legend overflow property

--- a/client/sass/_map.scss
+++ b/client/sass/_map.scss
@@ -58,7 +58,6 @@
       height: 100%;
       flex-flow: column nowrap;
       justify-content: space-evenly;
-      overflow: scroll;
       @include media(mobile) {
         flex-flow: row wrap;
       }
